--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,7 @@
     "strict": true,
     "skipLibCheck": true,
     "typeRoots": ["./src/types", "./node_modules/@types"]
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
